--- a/index.html
+++ b/index.html
@@ -24,34 +24,35 @@
     <dt><a href="https://info.cern.ch/hypertext/WWW/Status.html" target="_blank">Software Products</a></dt>
        <dd>A list of W3 project components and their current state. (e.g. <a href="https://info.cern.ch/hypertext/WWW/LineMode/Browser.html" target="_blank">Line Mode</a> ,X11 
       <a href="https://info.cern.ch/hypertext/WWW/Status.html#35" target="_blank">Viola</a> , 
-      <a href="https://info.cern.ch/hypertext/WWW/NeXT/WorldWideWeb.html">NeXTStep</a> , 
-      <a href="https://info.cern.ch/hypertext/WWW/Daemon/Overview.html">Servers</a> , 
-      <a href="https://info.cern.ch/hypertext/WWW/Tools/Overview.html">Tools</a> , 
-      <a href="https://info.cern.ch/hypertext/WWW/MailRobot/Overview.html">Mail robot </a>, 
-      <a href="https://info.cern.ch/hypertext/WWW/Status.html#57">Library</a> )</dd>
+      <a href="https://info.cern.ch/hypertext/WWW/NeXT/WorldWideWeb.html" target = "_blank">NeXTStep</a> , 
+      <a href="https://info.cern.ch/hypertext/WWW/Daemon/Overview.html" target = "_blank">Servers</a> , 
+      <a href="https://info.cern.ch/hypertext/WWW/Tools/Overview.html" target = "_blank">Tools</a> , 
+      <a href="https://info.cern.ch/hypertext/WWW/MailRobot/Overview.html" target = "_blank">Mail robot </a>, 
+      <a href="https://info.cern.ch/hypertext/WWW/Status.html#57" target = "_blank">Library</a> )</dd>
     <dt>
-      <a href="https://info.cern.ch/hypertext/WWW/Technical.html">Technical</a>
+      <a href="https://info.cern.ch/hypertext/WWW/Technical.html" target = "_blank">Technical</a>
     </dt>
        <dd>Details of protocols, formats, program internals etc</dd>
-    <dt><a href="https://info.cern.ch/hypertext/WWW/Bibliography.html">Bibliography</a></dt>
+    <dt><a href="https://info.cern.ch/hypertext/WWW/Bibliography.html" target = "_blank">Bibliography</a></dt>
     <dd>Paper documentation on W3 and references.</dd>
 
 
     <dt>
-      <a href="https://info.cern.ch/hypertext/WWW/People.html">People</a>
+      <a href="https://info.cern.ch/hypertext/WWW/People.html" target = "_blank">People</a>
     </dt>
     <dd>A list of some people involved in the project.</dd>
 
 
-    <dt><a href="https://info.cern.ch/hypertext/WWW/History.html">History</a></dt>
+    <dt><a href="https://info.cern.ch/hypertext/WWW/History.html" target = "_blank">History</a></dt>
     <dd>
     A summary of the history of the project.</dd>
 
-    <dt><a href="https://info.cern.ch/hypertext/WWW/Helping.html">How can I help </a>?</dt>
+    <dt><a href="https://info.cern.ch/hypertext/WWW/Helping.html" target = "_blank">How can I help </a>?</dt>
     <dd>If you would like to support the web.</dd>
 
-    <dt><a href="https://info.cern.ch/hypertext/README.html">Getting code</a></dt>
-    <dd>Getting the code by <a href="https://info.cern.ch/hypertext/WWW/LineMode/Defaults/Distribution.html">anonymous FTP</a> , etc.</dd>
+    <dt><a href="https://info.cern.ch/hypertext/README.html" target = "_blank">Getting code</a></dt>
+    <dd>Getting the code by <a href="https://info.cern.ch/hypertext/WWW/LineMode/Defaults/Distribution.html  " 
+       target="_blank">anonymous FTP</a> , etc.</dd>
   </dl>
 
 
